suite/tests/functions/valid/call-putchar.c
int putchar(int ch);

int main(void)
{
    putchar(65);
    putchar(10);
}
