suite/tests/functions/invalid/call-an-int.c
int maint(void)
{
    int not_a_function = 42;

    return not_a_function();
}